deploy/bases/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paste
  labels:
    app.kubernetes.io/name: paste
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: paste
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paste
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9113'
    spec:
      terminationGracePeriodSeconds: 60
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
        - image: registry.infomaniak.com:443/infomaniak/paste
          imagePullPolicy: IfNotPresent
          name: paste
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
        - name: exporter
          image: docker.io/nginx/nginx-prometheus-exporter
          imagePullPolicy: IfNotPresent
          args:
            - -nginx.scrape-uri
            - http://127.0.0.1:8080/stub_status
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - name: http-exporter
              containerPort: 9113
              protocol: TCP
