deploy/bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paste
  labels:
    app.kubernetes.io/name: paste
spec:
  ports:
  - targetPort: http
    port: 80
    name: http
    protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: paste
