deploy/bases/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paste
spec:
  ingressClassName: nginx-misc
  rules:
  - host: kpaste.infomaniak.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paste
            port:
              name: http
